<resources>
    <string name="app_name">projektowanie-mobilne</string>
    <string name="get_localization">Pobierz lokalizacje</string>
    <string name="music_player">Odtwarzacz muzyki</string>
    <string name="play">Odtwórz</string>
    <string name="pause">Pauza</string>
    <string name="stop">Stop</string>
    <string name="gallery">Galeria</string>
    <string name="start_time">0:00</string>
    <string name="title">Tytuł utworu</string>
    <string name="previous">Poprzedni</string>
    <string name="next">Następny</string>
</resources>